fixed border being behind everything

--- a/css/sass/co2ok.scss
+++ b/css/sass/co2ok.scss
@@ -4,6 +4,7 @@
   position: relative;
   font-family: Roboto, sans-serif;
   color:#606468;
+  z-index: 10;
 
   @media (max-width : 500px) {
 
@@ -200,13 +201,17 @@ img#co2ok_logo
     display: none;
     background: white;
     border-radius: 15px;
-    border: 1px solid black;
 
     margin-top: -50px;
 
+    border: 5px solid transparent;
+    border-image: linear-gradient(135deg, #1ceeaa 0%,#06d367 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+
+    border-image-slice: 1;
+
 
     &.ShowInfoBox{
-      display: block;  
+      display: block;
       opacity: 1
     }
 }
